unpackaged/main/default/objects/SDO_Service_Conversation_Helper__c/SDO_Service_Conversation_Helper__c.object-meta.xml
<CustomObject>
    <description>What: Used by the Service Team to hold Conversation Helper data
Who: Service Cloud Team</description>
    <label>Conversation Helper</label>
    <nameField>
        <label>Conversation Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>