unpackaged/main/default/objects/SDO_Service_Conversation_Helper__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Listen to Agent utterances for value</description>
    <inlineHelpText>Do we listen for the Value word inside the Agents input/message?</inlineHelpText>
    <label>Agent</label>
    <type>Checkbox</type>
</CustomField>