unpackaged/main/default/objects/SDO_Service_Conversation_Helper__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Listen to Customer utterances for value</description>
    <inlineHelpText>Do we listen for the Value word inside the Customers input/message?</inlineHelpText>
    <label>Customer</label>
    <type>Checkbox</type>
</CustomField>