unpackaged/main/default/objects/SDO_Service_Conversation_Helper__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What recommendation to show in the NBA when this helper is triggered</description>
    <inlineHelpText>What recommendation to show in the NBA when this helper is triggered</inlineHelpText>
    <label>Recommended Action</label>
    <referenceTo>Recommendation</referenceTo>
    <relationshipLabel>Conversation Helpers</relationshipLabel>
    <relationshipName>Conversation_Helpers</relationshipName>
    <type>Lookup</type>
</CustomField>