unpackaged/main/default/objects/SDO_Service_Conversation_Helper__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value to look for in the conversation - looks for this exact word to be somewhere in the transcript/message</description>
    <inlineHelpText>The value to look for in the conversation - looks for this exact word to be somewhere in the transcript/message</inlineHelpText>
    <label>Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>